// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/cardDetail/CardDetailProperties cancel on delete dialog should do nothing 1`] = `
<div>
  <div
    class="octo-propertylist CardDetailProperties"
  >
    <div
      class="octo-propertyrow"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="octo-propertyname"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Owner
            </span>
          </button>
        </div>
      </div>
      <div
        class="octo-propertyvalue"
        data-testid="select-non-editable"
        tabindex="0"
      >
        <span
          class="Label propColorDefault "
        >
          <span
            class="Label-text"
          >
            Jean-Luc Picard
          </span>
        </span>
      </div>
    </div>
    <div
      class="octo-propertyrow"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="octo-propertyname"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              MockStatus
            </span>
          </button>
        </div>
      </div>
      <input
        class="Editable octo-propertyvalue"
        placeholder="Empty"
        style="width: 100%;"
        title="1234"
        value="1234"
      />
    </div>
    <div
      class="octo-propertyname add-property"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="Button"
          type="button"
        >
          <span>
            + Add a property
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDetail/CardDetailProperties should match snapshot 1`] = `
<div>
  <div
    class="octo-propertylist CardDetailProperties"
  >
    <div
      class="octo-propertyrow"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="octo-propertyname"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Owner
            </span>
          </button>
        </div>
      </div>
      <div
        class="octo-propertyvalue"
        data-testid="select-non-editable"
        tabindex="0"
      >
        <span
          class="Label propColorDefault "
        >
          <span
            class="Label-text"
          >
            Jean-Luc Picard
          </span>
        </span>
      </div>
    </div>
    <div
      class="octo-propertyrow"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="octo-propertyname"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              MockStatus
            </span>
          </button>
        </div>
      </div>
      <input
        class="Editable octo-propertyvalue"
        placeholder="Empty"
        style="width: 100%;"
        title="1234"
        value="1234"
      />
    </div>
    <div
      class="octo-propertyname add-property"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="Button"
          type="button"
        >
          <span>
            + Add a property
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDetail/CardDetailProperties should show property types menu 1`] = `
<div>
  <div
    class="octo-propertylist CardDetailProperties"
  >
    <div
      class="octo-propertyrow"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="octo-propertyname"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Owner
            </span>
          </button>
        </div>
      </div>
      <div
        class="octo-propertyvalue"
        data-testid="select-non-editable"
        tabindex="0"
      >
        <span
          class="Label propColorDefault "
        >
          <span
            class="Label-text"
          >
            Jean-Luc Picard
          </span>
        </span>
      </div>
    </div>
    <div
      class="octo-propertyrow"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="octo-propertyname"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              MockStatus
            </span>
          </button>
        </div>
      </div>
      <input
        class="Editable octo-propertyvalue"
        placeholder="Empty"
        style="width: 100%;"
        title="1234"
        value="1234"
      />
    </div>
    <div
      class="octo-propertyname add-property"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper override menuOpened"
        role="button"
      >
        <button
          class="Button"
          type="button"
        >
          <span>
            + Add a property
          </span>
        </button>
        <div
          class="Menu noselect bottom "
        >
          <div
            class="menu-contents"
          >
            <div
              class="menu-options"
            >
              <div>
                <div
                  class="MenuOption LabelOption menu-option"
                >
                  <div
                    class="noicon"
                  />
                  <div
                    class="menu-name"
                  >
                    <b>
                      Select property type
                    </b>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  class="MenuOption MenuSeparator menu-separator"
                />
                <div
                  aria-label="Text"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Text
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  aria-label="Number"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Number
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  aria-label="Email"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Email
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  aria-label="Phone"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Phone
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  aria-label="URL"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      URL
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  aria-label="Select"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Select
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  aria-label="Multi select"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Multi select
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  aria-label="Date"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Date
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  aria-label="Person"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Person
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  aria-label="Multi person"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Multi person
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  aria-label="Checkbox"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Checkbox
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  aria-label="Created time"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Created time
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  aria-label="Created by"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Created by
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  aria-label="Last updated time"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Last updated time
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  aria-label="Last updated by"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Last updated by
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
              </div>
            </div>
            <div
              class="menu-spacer hideOnWidescreen"
            />
            <div
              class="menu-options hideOnWidescreen"
            >
              <div
                aria-label="Cancel"
                class="MenuOption TextOption menu-option menu-cancel"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Cancel
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
